updated addMask func to accept a shape string arg

--- a/style.css
+++ b/style.css
@@ -22,3 +22,15 @@
     -webkit-mask-size: 100%;
     -webkit-mask-repeat: no-repeat;
 }
+.circle {
+    background-color: var(--primary-color);
+    color: var(--primary-color);
+    width: 100vw;
+    height: 100vh;
+    mask-image: url();
+    mask-size: 100%;
+    mask-repeat: no-repeat;
+    -webkit-mask-image: url(svg/circle.svg);
+    -webkit-mask-size: 100%;
+    -webkit-mask-repeat: no-repeat;
+}
