added an input to change the primary BG variable to any hex color

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #3973b5;
+    --primary-color: #000000;
     --secondary-color: #ffffff;
     --max-width: 100vw;
     --max-height: 100vh;
