--- a/style.css
+++ b/style.css
@@ -1,15 +1,7 @@
 :root {
     --primary-color: #000000;
     --secondary-color: #ffffff;
-    --max-width: 100vw;
-    --max-height: 100vh;
     
-}
-
-html {
-    background-image: linear-gradient(180deg, aqua, yellow);
-    background-repeat: no-repeat;
-    height: 100vh;
 }
 
 * {
@@ -19,12 +11,17 @@ html {
     
 }
 
+html {
+    background-image: linear-gradient(180deg, aqua, yellow);
+    background-repeat: no-repeat;
+    height: 100vh;
+}
+
 .mask {
-    height: var(--max-height);
-    max-width: 50%;
-    max-height: 50vh;
+    height: 50vh;  
     margin-left: auto;
     margin-right: auto;
+    max-width: 50%;
     margin-top: 5rem;
     margin-bottom: 5rem;
     
@@ -114,6 +111,7 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 .label-text{
     font-size: 2rem;
@@ -123,3 +121,21 @@ html {
     height: 2rem;
     width: 12rem;
 }
+
+@media only screen and (max-width: 600px) and (min-width: 320px) {
+    .mask {
+        height: 20vh;
+    }
+  }
+
+@media only screen and (max-width: 2560px) and (min-width: 780px) {
+    .mask {
+        height: 50vh;
+    }
+  }
+
+@media only screen and (max-width: 5000px) and (min-width: 2560px) {
+    .mask {
+        height: 80vh;
+    }
+  }
