--- a/style.css
+++ b/style.css
@@ -11,10 +11,9 @@
     
 }
 
-html {
-    background-image: linear-gradient(180deg, aqua, yellow);
-    background-repeat: no-repeat;
-    height: 100vh;
+html{
+    position:relative; 
+  min-height: 100%;
 }
 
 .mask {
@@ -23,7 +22,6 @@ html {
     margin-right: auto;
     max-width: 50%;
     margin-top: 5rem;
-    margin-bottom: 5rem;
     
 }
 
@@ -109,10 +107,10 @@ html {
 }
 .form{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    
-    
+    justify-content: space-around;
+    padding: 0;
 }
 .label-text{
     font-size: 2rem;
