--- a/style.css
+++ b/style.css
@@ -118,6 +118,13 @@ html{
     flex-direction: column;
     text-align: center;
 }
+
+.shape-color-container{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
 .label-text{
     font-size: 1.5rem;
 }
