--- a/style.css
+++ b/style.css
@@ -112,27 +112,32 @@ html{
     justify-content: space-around;
     padding: 0;
 }
-
 .dropdown-container{
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: auto;
     color: #fff;
     background-color: rgba(0,0,0,.3);
     border: 1px solid #fff;
     border-radius: .5rem;
+    padding: .5rem;
 }
-
+#shapes{
+    border-radius: .4rem;
+}
 .shape-color-container{
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: auto;
     color: #fff;
     background-color: rgba(0,0,0,.3);
     border: 1px solid #fff;
     border-radius: .5rem;
+    padding: .5rem;
+}
+#color{
+    border-radius: .4rem;
+    text-align: center;
 }
 
 .label-text{
@@ -141,7 +146,7 @@ html{
 
 .input{
     height: 2rem;
-    width: 12rem;
+    width: 11.5rem;
 }
 
 @media only screen and (max-width: 600px) and (min-width: 320px) {
@@ -154,6 +159,12 @@ html{
         align-items: center;
         justify-content: space-around;
         padding: 0;
+    }
+    .dropdown-container{
+        margin-bottom: .5rem;
+    }
+    .shape-color-container{
+        margin-bottom: .5rem;
     }
   }
 
