--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html{
     height: 50vh;  
     margin-left: auto;
     margin-right: auto;
-    max-width: 50%;
+    max-width: 30%;
     margin-top: 5rem;
     
 }
@@ -190,7 +190,28 @@ html{
 
 @media only screen and (max-width: 600px) and (min-width: 320px) {
     .mask {
-        height: 35vh;
+        height: 25vh;
+    }
+    .form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        padding: 0;
+    }
+    .dropdown-container{
+        margin-bottom: .5rem;
+    }
+    .shape-color-container{
+        margin-bottom: .5rem;
+    }
+    .bg-img-container{
+        margin-bottom: .5rem;
+    }
+  }
+@media only screen and (max-width: 780px) and (min-width: 600px) {
+    .mask {
+        height: 25vh;
     }
     .form{
         display: flex;
