--- a/colors.css
+++ b/colors.css
@@ -16,6 +16,7 @@
 }
 
 fieldset {
+
     border: none;
 }
 
@@ -27,7 +28,7 @@ form{
 
 legend{
     text-align: center;
-    padding: 1rem 0;
+    padding-top: 1.5rem;
     font-size: 1.5rem;
 }
 
@@ -51,6 +52,6 @@ output[for="b"]{
  }
  .hex-container{
 text-align: center;
-padding-bottom: 1rem;
+padding-bottom: 1.5rem;
 font-size: 1.5rem;
  }
